--- a/app/derive/src/Derive/Basket/View/checkout.twig
+++ b/app/derive/src/Derive/Basket/View/checkout.twig
@@ -14,7 +14,13 @@
     data.customers = {{ customers.toJSON() | raw }};
     data.orderType = '{{ orderType }}';
     data.offer = {{ offer.toJSON() | raw }};
-    data.step = 'order';
+    data.step = '{{ step }}';
+
+    // 2nd step
+    data.order = {% if order %}{{ order.toJSON() | raw }}{% else %}{}{% endif %};
+    data.installments = {% if installments %}{{ installments | json_encode | raw }}{% else %}[]{% endif %};
+    data.summary = {% if summary %}{{ summary | json_encode | raw }}{% else %}{}{% endif %};
+    data.portions = {% if portions %}{{ portions | json_encode | raw }}{% else %}[]{% endif %};
 
     Vue.filter('price', function (price, decimals) {
         return locale.price(price, decimals);
@@ -29,15 +35,18 @@
                 offer: data.offer,
                 packets: data.packets,
                 step: data.step,
-                order: {},
-                installments: [],
-                portions: [],
-                summary: {},
-                promocode: null
+                order: data.order,
+                installments: data.installments,
+                portions: data.portions,
+                summary: data.summary,
+                promocode: null,
+                promoCodeNotice: null,
+                promoCodeDiff: null,
+                installment: 1
             };
         },
         ready: function () {
-            $('.step-order').slideDown(500);
+            $('.step-{{ step }}').slideDown(500);
 
             history.replaceState({
                 step: this.step,
@@ -51,7 +60,7 @@
         },
         computed: {
             payee: function () {
-                return this.customers[0];
+                return this.customers[Object.keys(this.customers)[0]];
             }
         },
         methods: {
@@ -114,13 +123,25 @@
 
                 return sum;
             },
+            getFinalSummary: function () {
+                return this.getSummary() - this.promoCodeDiff;
+            },
             applyPromoCode: function () {
                 http.post('{{ url('derive.basket.applyPromoCode') }}', {
                     promocode: this.promocode,
-                    'offer_id': this.offer.id
+                    'offer_id': this.offer.id,
+                    price: this.getSummary()
                 }, function (data) {
-                    console.log(data);
-                });
+                    this.promoCodeNotice = data.notice;
+                    this.promoCodeDiff = this.getSummary() - data.price;
+
+                }.bind(this), function (data) {
+                    if (data.responseJSON.exception) {
+                        this.promoCodeNotice = data.responseJSON.exception;
+                        this.promoCodeDiff = 0.0;
+                    }
+
+                }.bind(this));
             },
             submitOrderForm: function () {
                 var customers = [];
@@ -150,6 +171,10 @@
                         promocode: this.promocode
                     };
                 }.bind(this), function (data) {
+                    if (data.error) {
+                        return;
+                    }
+
                     this.step = 'estimate';
                     this.order = data.order;
                     this.installments = data.installments;
@@ -160,30 +185,38 @@
                     history.pushState({
                         step: 'order',
                         next: 'estimate'
-                    }, 'Estimate', '/estimate');
+                    }, 'Estimate', data.replaceUrl);
                 }.bind(this), function () {
                     // error
                 });
             },
             submitEstimateForm: function () {
                 this.navigateSteps('estimate', 'validating');
+                this.step = 'validating';
+
+                history.pushState({
+                    step: 'estimate',
+                    next: 'validating'
+                }, 'Validating order', '/validating-order');
 
                 /**
                  * Make request and handle result.
                  */
-                http.post('{{ url('derive.basket.estimate') }}', function () {
+                http.post(this.order.estimateUrl, function () {
                     return {
                         installments: this.installment,
                         order_id: this.order.id
                     };
                 }.bind(this), function (data) {
-                    this.step = 'validating';
-
-                    history.pushState({
-                        step: 'estimate',
-                        next: 'validating'
-                    }, 'Validating order', '/validating-order');
+                    window.location.href = data.redirect;
                 });
+            },
+            updateInstallments: function () {
+                http.post('{{ url('derive.basket.installments', {order: order}) }}', {
+                    installments: this.installment
+                }, function (data) {
+                    this.installments = data.installments;
+                }.bind(this));
             },
             navigateSteps: function (prev, next) {
                 $('.step-' + prev).slideUp(500, function () {
