Fix layout upgrade, vue.js upgrade, assets

--- a/app/impero/src/Pckg/Generic/View/backend.twig
+++ b/app/impero/src/Pckg/Generic/View/backend.twig
@@ -28,7 +28,7 @@
     </div>
 </nav>
 
-<div class="container-fluid">
+<div class="container-fluid" id="vue-app">
     {% block content %}{{ content | raw }}{% endblock %}
 </div>
 
