--- a/app/impero/src/Pckg/Generic/View/backend.twig
+++ b/app/impero/src/Pckg/Generic/View/backend.twig
@@ -15,7 +15,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">Impero</a>
+            <a class="navbar-brand" href="/">Impero</a>
         </div>
 
         {% if _auth.isLoggedIn() %}
