--- a/app/impero/src/Pckg/Generic/View/backend.twig
+++ b/app/impero/src/Pckg/Generic/View/backend.twig
@@ -15,8 +15,33 @@
             }
 
             getFields() {
-                return ['id', 'system_id', 'name', 'ip', 'ptr'];
+                return {
+                    id: Number,
+                    system_id: Number,
+                    name: String,
+                    ip: String,
+                    ptr: String
+                };
             }
+
+            getRelations() {
+                return {
+                    services: {
+                        type: Array,
+                        of: Impero.Servers.Record.Service
+                    },
+                    dependencies: {
+                        type: Array,
+                        of: Impero.Servers.Record.Dependency
+                    }
+                };
+            }
+
+        };
+        Impero.Servers.Entity.ServersServices = class extends Pckg.Database.Entity {
+
+        };
+        Impero.Servers.Entity.ServersDependencies = class extends Pckg.Database.Entity {
 
         };
         Impero.Servers.Entity.Services = class extends Pckg.Database.Entity {
@@ -29,6 +54,49 @@
                     callback(Pckg.Collection.collect(data.services, Impero.Servers.Record.Service));
                 });
             }
+
+            getRelations() {
+                return {
+                    pivot: {
+                        type: Object,
+                        of: Impero.Servers.Record.ServersService
+                    }
+                };
+            }
+
+            getFields() {
+                return {
+                    id: Number,
+                    name: String
+                };
+            }
+        };
+        Impero.Servers.Entity.Dependencies = class extends Pckg.Database.Entity {
+            static id(id, callback) {
+                return this.by('id', id, callback);
+            }
+
+            static by(key, value, callback) {
+                return http.getJSON(utils.url('{{ url('api.impero.servers.server.dependencies') }}', {server: value}), function (data) {
+                    callback(Pckg.Collection.collect(data.dependencies, Impero.Servers.Record.Dependency));
+                });
+            }
+
+            getRelations() {
+                return {
+                    pivot: {
+                        type: Object,
+                        of: Impero.Servers.Record.ServersDependency
+                    }
+                };
+            }
+
+            getFields() {
+                return {
+                    id: Number,
+                    name: String
+                };
+            }
         };
 
         Impero.Servers.Record.Server = class extends Pckg.Database.Record {
@@ -39,6 +107,12 @@
                 }.bind(this));
             }
 
+            refreshServicesStatuses() {
+                $.each(this.services, function (i, service) {
+                    service.refreshStatus();
+                });
+            }
+
             getEntity() {
                 return new Impero.Servers.Entity.Servers();
             }
@@ -47,13 +121,64 @@
                 if (type == 'insert') {
                     return utils.url('{{ url('impero.servers.addServer') }}', {server: this.id});
                 }
-
-                console.log('unknown url type');
             }
 
         };
 
-        Impero.Servers.Record.Service = class Service extends Pckg.Database.Record {
+        Impero.Servers.Record.ServersService = class extends Pckg.Database.Record {
+
+            getEntity() {
+                return new Impero.Servers.Entity.ServersServices();
+            }
+
+        };
+
+        Impero.Servers.Record.ServersDependency = class extends Pckg.Database.Record {
+
+            getEntity() {
+                return new Impero.Servers.Entity.ServersDependencies();
+            }
+
+        };
+
+        Impero.Servers.Record.Service = class extends Pckg.Database.Record {
+
+            refreshStatus() {
+                http.getJSON(this.getUrl('refreshServersServiceStatus'), function (data) {
+                    this.pivot = new Impero.Servers.Record.ServersService(data.serversService);
+                }.bind(this));
+            }
+
+            getUrl(type) {
+                if (type == 'refreshServersServiceStatus') {
+                    return utils.url('{{ url('impero.servers.refreshServersServiceStatus') }}', {serversService: this.pivot.id});
+                }
+            }
+
+            getEntity() {
+                return new Impero.Servers.Entity.Services();
+            }
+
+        };
+
+        Impero.Servers.Record.Dependency = class extends Pckg.Database.Record {
+
+            refreshStatus() {
+                http.getJSON(this.getUrl('refreshServersDependencyStatus'), function (data) {
+                    this.pivot = new Impero.Servers.Record.ServersDependency(data.serversDependency);
+                }.bind(this));
+            }
+
+            getUrl(type) {
+                if (type == 'refreshServersDependencyStatus') {
+                    return utils.url('{{ url('impero.servers.refreshServersDependencyStatus') }}', {serversDependency: this.pivot.id});
+                }
+            }
+
+            getEntity() {
+                return new Impero.Servers.Entity.Dependencies();
+            }
+
         };
     </script>
 </head>
